--- a/inputs.html
+++ b/inputs.html
@@ -27,6 +27,8 @@
         <input id="10" type="color">
         <br>
         <input id="11" type="reset">
+        <br>
+        <input id="12" type=""file>
     </form>
 </body>
 
